fixed autocp on mobile, input border color

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,7 @@ input {
     font-size: 16px;
     text-indent: 5px;
     margin-bottom: 25px;
+    border: 1px solid #b5b5b5 !important; 
 }
 
 .button-wrap {
